<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginRight="5dp"
                    android:background="#6f455b">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/alimentacao"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4d000000"></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ALIMENTACAO"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="10dp"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:background="#6f455b">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/moda"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4d000000"></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/MODA"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="10dp"/>

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginRight="5dp"
                    android:background="#6f455b">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/estetica"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4d000000"></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BELEZAESTETICA"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="10dp"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:background="#6f455b">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/saude"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4d000000"></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SAUDE"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="10dp"/>
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginRight="5dp"
                    android:background="#6f455b">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/edicacao"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4d000000"></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/EDUCACAO"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="10dp"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:background="#6f455b">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/bebe"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4d000000"></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BEBESCRIANCAS"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="10dp"/>
                </FrameLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginRight="5dp"
                    android:background="#6f455b">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/construcao"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4d000000"></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CONSTRUCOES"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="10dp"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:background="#6f455b">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/pet"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4d000000"></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PET"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="10dp"/>
                </FrameLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginRight="5dp"
                    android:background="#6f455b">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/automoveis"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4d000000"></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AUTOMOVEIS"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="10dp"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:background="#6f455b">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/esporte"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4d000000"></LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ESPORTES"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_gravity="center|bottom"
                        android:layout_marginBottom="10dp"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>